# python-template

./: .gitignore  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/: main.yml
.github/workflows/: main.yml
