[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Dmitrijs Balcers <dmitrijs.balcers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
returns = "^0.18.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
typing-extensions = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
